edit index.html rgb.html index.js style.css

--- a/rgb.html
+++ b/rgb.html
@@ -27,7 +27,12 @@
 	    </a>  
 	  </div>
 	</nav>
-
+	<!-- loading  spinner -->
+	<div class="spinner">
+		<div class="loader">
+			<div></div>
+		</div>
+	</div>
 	<!-- container -->
 	<br><br>
 	<div class="px-2 mx-auto my-4 mt-5">
