--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
 	    </a>  
 	  </div>
 	</nav>
+	<!-- loading  spinner -->
+	<div class="spinner">
+		<div class="loader">
+			<div></div>
+		</div>
+	</div>
 	<!-- container -->
 	<br><br>
-	<div class="px-2 mx-auto my-4 mt-5">
+	<div class="px-2 mx-auto my-4 mt-5 container-fluid">
 		 <div class="colors-header row  mx-auto text-center"> 
 		</div>
 	</div>
@@ -43,7 +49,6 @@
 	<!-- script -->
 	 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 	 <script type="text/javascript" src="./js/index.js"></script>
 </body>
